# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2010  Vasco Nunes, Piotr Ożarowski


2010-06-25  Michael Jahn
	* updated movie plugin KinoDe
	* added HKMDB movie plugin

2010-06-07  Michael Jahn
	* added Clubedevideo movie plugin

2010-05-10  Michael Jahn
	* updated movie plugin IMDB-de
	* poster md5 wasn't saved if poster is already in database

2010-05-06  Michael Jahn
	* [#324171] PDF Font Size
	* support for covers, year, runtime, notes and plot for PDF export
	  elements for export can be deselected

2010-04-28  Piotr Ożarowski
	* Use 255 as maximum string length for few fields (MySQL apparently
	  doesn't like >=256 on some configurations)

2010-04-21  Michael Jahn
	* updated movie plugin AniDB

2010-03-28  Michael Jahn
	* updated movie plugin WP

2010-03-27  Michael Jahn
	* updated movie plugin IMDb-de, IMDb-es, Zelluloid

2010-03-12  Michael Jahn
	* updated movie plugin DVDPalace

2010-03-04  Michael Jahn
	* new import plugin: GriffithXML

2010-03-02  Michael Jahn
	* [#525039] crashed while adding films wont reboot linux mint 8
	* [#525869] Plugin FilmAffinity (ES) doesn't import genre
	* IMDb movie plugin updated

2010-01-17  Michael Jahn
	* Scope movie plugin added

2010-01-05  Michael Jahn
	* delete button added to the advanced filter dialog
	* updated movie plugin Cinematografo (year added to result list entries)

---- 0.11 ----

2010-01-09  Piotr Ożarowski
	* Replace "Aspect ratio" field with "Resolution" (aspect ratio is hidden
	  for now)
	* MyMoviesIt movie plugin updated (thanks to FiloSottile)

2010-01-06  Piotr Ożarowski
	* Some cleanups

2010-01-05  Michael Jahn
	* save and restore sorting column in main list
	* updated movie plugin Stopklatka

2010-01-04  Piotr Ożarowski
	* Add Croatian translation (thanks to Davor I and nafterburner)

2010-01-04  Michael Jahn
	* add MoviePosterDB extension (supports fetching posters)

2010-01-03  Michael Jahn
	* added column header row and some more columns to the basic CSV export